--- a/app/src/main/res/layout/item_list_item.xml
+++ b/app/src/main/res/layout/item_list_item.xml
@@ -6,18 +6,19 @@
     android:layout_height="wrap_content">
 
     <ImageView
-        android:layout_width="75dp"
-        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
         tools:src="@drawable/placeholder"
         android:id="@+id/item_image_view"
         android:adjustViewBounds="true"
-        android:scaleType="centerInside" />
+        android:scaleType="centerInside"
+        />
 
     <RelativeLayout
         android:layout_width="0dp"
         android:layout_weight="1"
         android:padding="5dp"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
 
         <TextView
             android:layout_width="wrap_content"
@@ -26,6 +27,7 @@
             tools:text="Item Name"
             android:layout_centerHorizontal="true"
             android:fontFamily="sans-serif-medium"
+            android:textSize="20sp"
             android:paddingBottom="5dp"
             android:textAppearance="?android:textAppearanceMedium"
             android:textColor="#2B3D4D"/>
@@ -35,8 +37,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/current_quantity_hint"
-            style="@style/list_item_details"
             android:id="@+id/current_quantity_hint"
+            android:textSize="18sp"
+            android:textColor="#AEB6BD"
+            android:fontFamily="sans-serif"
             android:layout_below="@id/item_name_text_view"/>
         <TextView
             android:layout_width="wrap_content"
@@ -44,7 +48,9 @@
             tools:text="10"
             android:id="@+id/current_quantity_text_view"
             android:layout_toRightOf="@id/current_quantity_hint"
-            style="@style/list_item_details"
+            android:textSize="18sp"
+            android:textColor="#AEB6BD"
+            android:fontFamily="sans-serif"
             android:layout_below="@id/item_name_text_view"/>
 
         <!--Views for prices of the item-->
@@ -52,7 +58,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/price_hint"
-            style="@style/list_item_details"
+            android:textSize="18sp"
+            android:textColor="#AEB6BD"
+            android:fontFamily="sans-serif"
             android:id="@+id/price_hint"
             android:layout_below="@id/current_quantity_hint"/>
         <TextView
@@ -61,7 +69,9 @@
             tools:text="10"
             android:id="@+id/price_text_view"
             android:layout_toRightOf="@id/price_hint"
-            style="@style/list_item_details"
+            android:textSize="18sp"
+            android:textColor="#AEB6BD"
+            android:fontFamily="sans-serif"
             android:layout_below="@id/current_quantity_text_view"/>
 
     </RelativeLayout>
