--- a/app/src/main/res/layout/list_activity.xml
+++ b/app/src/main/res/layout/list_activity.xml
@@ -6,7 +6,16 @@
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="xyz.cybersapien.inventorymanager.MainActivity">
+    tools:context="xyz.cybersapien.inventorymanager.ItemListActivity">
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:id="@+id/add_items_hint"
+        tools:text="Nothing here!"
+        android:textSize="18dp"
+        android:textColor="@android:color/black"/>
 
     <ListView
         android:layout_width="match_parent"
