--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,12 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="colorBackground">#FFF7DA</color>
+
+    <!-- Colors for different activities in the app-->
+    <color name="colorItems">#4CAF50</color>
+    <color name="colorMall">#536DFE</color>
+    <color name="colorSales">#607D8B</color>
+    <color name="colorSuppliers">#FF9800</color>
+
 </resources>
