--- a/app/src/main/res/layout/activity_new_item.xml
+++ b/app/src/main/res/layout/activity_new_item.xml
@@ -9,11 +9,12 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:orientation="vertical"
-    tools:context="xyz.cybersapien.inventorymanager.NewItem">
+    tools:context="xyz.cybersapien.inventorymanager.ItemEditorActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:padding="2dp">
 
         <TextView
             android:layout_width="wrap_content"
@@ -35,7 +36,8 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:padding="2dp" >
 
         <TextView
             android:layout_width="wrap_content"
@@ -58,7 +60,8 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:padding="2dp" >
 
         <TextView
             android:layout_width="wrap_content"
@@ -81,7 +84,8 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:padding="2dp" >
 
         <TextView
             android:layout_width="wrap_content"
@@ -96,11 +100,36 @@
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="48dp"
-            android:id="@+id/suppliers_spinner">
-
-        </Spinner>
+            android:id="@+id/suppliers_spinner" />
 
     </LinearLayout>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="5dp"
+        android:padding="2dp">
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="start"
+            android:id="@+id/order_button"
+            android:text="Order More"
+            />
+
+        <View
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="0dp" />
+
+        <Button
+            android:text="Add"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end"
+            android:id="@+id/submit_button" />
+
+    </LinearLayout>
 
 </LinearLayout>
