--- a/app/src/main/res/layout/activity_item_editor.xml
+++ b/app/src/main/res/layout/activity_item_editor.xml
@@ -1,135 +1,159 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_new_item"
+
+<ScrollView android:layout_height="match_parent"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:orientation="vertical"
-    tools:context="xyz.cybersapien.inventorymanager.ItemEditorActivity">
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    >
 
     <LinearLayout
+        android:id="@+id/activity_new_item"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="2dp">
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin"
+        android:orientation="vertical"
+        tools:context="xyz.cybersapien.inventorymanager.ItemEditorActivity">
 
-        <TextView
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Name: "
-            android:minEms="5"
-            android:maxEms="5"
-            android:textSize="16sp"/>
+            android:padding="2dp">
 
-        <EditText
-            android:layout_width="0dp"
-            android:paddingLeft="10dp"
-            android:inputType="text"
-            android:hint="Name"
-            android:layout_weight="0.94"
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Name: "
+                android:minEms="5"
+                android:maxEms="5"
+                android:textSize="16sp"/>
+
+            <EditText
+                android:layout_width="0dp"
+                android:paddingLeft="10dp"
+                android:inputType="text"
+                android:hint="Name"
+                android:layout_weight="0.94"
+                android:layout_height="wrap_content"
+                android:id="@+id/item_name_edit_text"/>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/item_name_edit_text"/>
-    </LinearLayout>
+            android:padding="2dp" >
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="2dp" >
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Quantity: "
+                android:minEms="5"
+                android:maxEms="5"
+                android:textSize="16sp"/>
 
-        <TextView
-            android:layout_width="wrap_content"
+            <EditText
+                android:layout_width="0dp"
+                android:paddingLeft="10dp"
+                android:layout_weight="1"
+                android:inputType="number"
+                android:hint="Quantity"
+                android:layout_height="wrap_content"
+                android:id="@+id/item_quantity_edit_text"/>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Quantity: "
-            android:minEms="5"
-            android:maxEms="5"
-            android:textSize="16sp"/>
+            android:padding="2dp" >
 
-        <EditText
-            android:layout_width="0dp"
-            android:paddingLeft="10dp"
-            android:layout_weight="1"
-            android:inputType="number"
-            android:hint="Quantity"
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Price: "
+                android:minEms="5"
+                android:maxEms="5"
+                android:textSize="16sp"/>
+
+            <EditText
+                android:layout_width="0dp"
+                android:paddingLeft="10dp"
+                android:layout_weight="1"
+                android:inputType="numberDecimal"
+                android:hint="Price"
+                android:layout_height="wrap_content"
+                android:id="@+id/item_price_edit_text"/>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/item_quantity_edit_text"/>
+            android:padding="2dp" >
 
-    </LinearLayout>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Supplier: "
+                android:minEms="5"
+                android:maxEms="5"
+                android:textSize="16sp"
+                android:layout_gravity="center_vertical" />
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="2dp" >
+            <Spinner
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="48dp"
+                android:id="@+id/suppliers_spinner" />
 
-        <TextView
-            android:layout_width="wrap_content"
+        </LinearLayout>
+
+        <ImageView
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Price: "
-            android:minEms="5"
-            android:maxEms="5"
-            android:textSize="16sp"/>
-
-        <EditText
-            android:layout_width="0dp"
-            android:paddingLeft="10dp"
-            android:layout_weight="1"
-            android:inputType="numberDecimal"
-            android:hint="Price"
-            android:layout_height="wrap_content"
-            android:id="@+id/item_price_edit_text"/>
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="2dp" >
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Supplier: "
-            android:minEms="5"
-            android:maxEms="5"
-            android:textSize="16sp"
-            android:layout_gravity="center_vertical" />
-
-        <Spinner
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:layout_height="48dp"
-            android:id="@+id/suppliers_spinner" />
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="5dp"
-        android:padding="2dp">
-
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="start"
-            android:id="@+id/order_button"
-            android:text="Order More"
+            android:adjustViewBounds="true"
+            tools:src="@drawable/placeholder"
+            android:id="@+id/item_image_view"
             />
 
-        <View
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:layout_height="0dp" />
-
         <Button
-            android:text="Add"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="end"
-            android:id="@+id/submit_button" />
+            android:layout_gravity="center_horizontal"
+            android:text="Add Image"
+            android:id="@+id/take_image_button"/>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp"
+            android:padding="2dp">
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="start"
+                android:id="@+id/order_button"
+                android:text="Order More"
+                />
+
+            <View
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="0dp" />
+
+            <Button
+                android:text="Add"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="end"
+                android:id="@+id/submit_button" />
+
+        </LinearLayout>
 
     </LinearLayout>
 
-</LinearLayout>
+
+</ScrollView>
