--- a/app/src/main/res/layout/list_activity.xml
+++ b/app/src/main/res/layout/list_activity.xml
@@ -12,7 +12,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:id="@+id/add_items_hint"
+        android:gravity="center"
+        android:id="@+id/empty_list_hint"
         tools:text="Nothing here!"
         android:textSize="18dp"
         android:textColor="@android:color/black"/>
