--- a/app/src/main/res/menu/list_menu.xml
+++ b/app/src/main/res/menu/list_menu.xml
@@ -10,6 +10,10 @@
         app:showAsAction="never"/>
 
     <item
+        android:id="@+id/delete_all"
+        android:title="Delete all"
+        app:showAsAction="never" />
+    <item
         android:id="@+id/action_menu_list_toggle"
         app:showAsAction="never"
         android:title="Toggle" />
