--- a/app/src/main/res/layout/activity_perform_action.xml
+++ b/app/src/main/res/layout/activity_perform_action.xml
@@ -2,11 +2,10 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_sale"
+    android:id="@+id/activity_perform_action"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="@dimen/activity_vertical_margin"
-    tools:context="xyz.cybersapien.inventorymanager.SaleActivity"
     android:orientation="vertical">
 
     <LinearLayout
@@ -39,12 +38,12 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:id="@+id/sale_items_list"/>
+        android:id="@+id/action_items_list"/>
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="end"
-        android:text="Enter sale"
+        android:id="@+id/perform_action_button"
         />
 </LinearLayout>
