Performed Final Checks and fixed bugs

--- a/app/src/main/res/layout/activity_item_editor.xml
+++ b/app/src/main/res/layout/activity_item_editor.xml
@@ -25,16 +25,17 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Name: "
+                android:text="@string/name"
                 android:minEms="5"
                 android:maxEms="5"
                 android:textSize="16sp"/>
 
             <EditText
                 android:layout_width="0dp"
+                android:paddingRight="10dp"
                 android:paddingLeft="10dp"
                 android:inputType="text"
-                android:hint="Name"
+                android:hint="@string/name"
                 android:layout_weight="0.94"
                 android:layout_height="wrap_content"
                 android:id="@+id/item_name_edit_text"/>
@@ -48,7 +49,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Quantity: "
+                android:text="@string/quantity"
                 android:minEms="5"
                 android:maxEms="5"
                 android:textSize="16sp"/>
@@ -63,6 +64,7 @@
             <TextView
                 android:layout_width="0dp"
                 android:paddingLeft="10dp"
+                android:paddingRight="10dp"
                 android:layout_weight="1"
                 android:layout_height="wrap_content"
                 android:id="@+id/item_quantity_text_view"/>
@@ -82,7 +84,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Price: "
+                android:text="@string/price"
                 android:minEms="5"
                 android:maxEms="5"
                 android:textSize="16sp"/>
@@ -90,9 +92,10 @@
             <EditText
                 android:layout_width="0dp"
                 android:paddingLeft="10dp"
+                android:paddingRight="10dp"
                 android:layout_weight="1"
                 android:inputType="numberDecimal"
-                android:hint="Price"
+                android:hint="@string/price"
                 android:layout_height="wrap_content"
                 android:id="@+id/item_price_edit_text"/>
 
@@ -106,7 +109,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Supplier: "
+                android:text="@string/supplier"
                 android:minEms="5"
                 android:maxEms="5"
                 android:textSize="16sp"
@@ -138,7 +141,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal|bottom"
-                android:text="Add Image"
+                android:text="@string/add_image"
                 android:id="@+id/take_image_button"/>
 
         </LinearLayout>
@@ -153,7 +156,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="start"
                 android:id="@+id/order_button"
-                android:text="Order More"
+                android:text="@string/order_more"
                 />
 
             <View
@@ -162,7 +165,7 @@
                 android:layout_height="0dp" />
 
             <Button
-                android:text="Add"
+                android:text="@string/add"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="end"
