--- a/app/src/main/res/layout/activity_supplier_editor.xml
+++ b/app/src/main/res/layout/activity_supplier_editor.xml
@@ -19,7 +19,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Name: "
+        android:text="@string/name"
         android:minEms="5"
         android:maxEms="5"
         android:textSize="16sp"/>
@@ -27,8 +27,9 @@
     <EditText
         android:layout_width="0dp"
         android:paddingLeft="10dp"
+        android:paddingRight="10dp"
         android:inputType="text"
-        android:hint="Name"
+        android:hint="@string/name"
         android:layout_weight="1"
         android:layout_height="wrap_content"
         android:id="@+id/supplier_name_edit_text"/>
@@ -43,7 +44,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Email: "
+            android:text="@string/email"
             android:minEms="5"
             android:maxEms="5"
             android:textSize="16sp"/>
@@ -51,8 +52,9 @@
         <EditText
             android:layout_width="0dp"
             android:paddingLeft="10dp"
+            android:paddingRight="10dp"
             android:inputType="textEmailAddress"
-            android:hint="google@abc.xyz"
+            android:hint="@string/google_abc_xyz"
             android:layout_weight="1"
             android:layout_height="wrap_content"
             android:id="@+id/supplier_email_edit_text"/>
@@ -67,7 +69,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Phone: "
+            android:text="@string/phone"
             android:minEms="5"
             android:maxEms="5"
             android:textSize="16sp"/>
@@ -75,6 +77,7 @@
         <EditText
             android:layout_width="0dp"
             android:paddingLeft="10dp"
+            android:paddingRight="10dp"
             android:inputType="phone"
             android:hint="(XXX) XX XXXX"
             android:layout_weight="1"
