--- a/app/src/main/res/layout/list_activity.xml
+++ b/app/src/main/res/layout/list_activity.xml
@@ -15,7 +15,7 @@
         android:gravity="center"
         android:id="@+id/empty_list_hint"
         tools:text="Nothing here!"
-        android:textSize="18dp"
+        android:textSize="18sp"
         android:textColor="@android:color/black"/>
 
     <ListView
