--- a/app/src/main/res/menu/menu_editors.xml
+++ b/app/src/main/res/menu/menu_editors.xml
@@ -4,6 +4,6 @@
 
     <item
         android:id="@+id/action_delete_this"
-        android:title="Delete this"
+        android:title="@string/delete_this"
         app:showAsAction="never"/>
 </menu>
